:wrench: (App) Init config

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-MONGO_DB_URI="chemin de la db sans le nom de la database"
-## Exemple
-## "mongodb+srv://dbUser:dbPassword@cluster0.0ewme.mongodb.net?retryWrites=true&w=majority"
-MONGO_DB_NAME="nom de la db"
+## At first install, set up personal environment variables
+## Create an .env.local file into project's root
+## FROM "mongodb+srv://dbUsername:dbPassword@cluster0.0ewme.mongodb.net/dbName?retryWrites=true&w=majority"
+
+## CREATE
+## MONGO_DB_URI="mongodb+srv://dbUser:dbPassword@cluster0.0ewme.mongodb.net?retryWrites=true&w=majority"
+## MONGO_DB_NAME="dbName"
