--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.2.8",
     "@mui/styled-engine-sc": "^5.1.0",
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
     "mongodb": "^3.5.9",
     "next": "12.0.8",
     "prop-types": "^15.8.1",
