--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
     "mongodb": "^3.5.9",
-    "next": "12.0.8",
+    "next": "^12.0.9",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
