:sparkles: Creation d'un contexte pour la connexion

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 ## CREATE
 ## MONGO_DB_URI="mongodb+srv://dbUser:dbPassword@cluster0.0ewme.mongodb.net?retryWrites=true&w=majority"
 ## MONGO_DB_NAME="dbName"
+## JWT_SECRET = openssl rand -base64 32
