--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^5.1.0",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
+    "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "next": "^12.0.9",
