--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "next": "^12.0.9",
+    "next-swagger-doc": "^0.1.11",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-react": "^4.5.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
