--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "next": "^12.0.9",
+    "next-fonts": "^1.5.1",
     "next-swagger-doc": "^0.1.11",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
