--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^12.0.9",
     "next-fonts": "^1.5.1",
     "next-swagger-doc": "^0.1.11",
+    "nodemailer": "^6.7.2",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
