--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.2.8",
     "@mui/styled-engine-sc": "^5.1.0",
     "axios": "^0.24.0",
+    "blueimp-md5": "^2.19.0",
     "date-fns": "^2.28.0",
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
