:sparkles: (SignIn) Mise en place nodemailer + corrections diverses cote front

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@
 ## MONGO_DB_URI="mongodb+srv://dbUser:dbPassword@cluster0.0ewme.mongodb.net?retryWrites=true&w=majority"
 ## MONGO_DB_NAME="dbName"
 ## JWT_SECRET = openssl rand -base64 32
+## EMAIL_CONFIRM="le mail de reception"
+## EMAIL_CONFIRM_KEY="password"
