--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "blueimp-md5": "^2.19.0",
     "date-fns": "^2.28.0",
     "express-jwt": "^6.1.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "next": "^12.0.9",
