--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.2.8",
     "@mui/styled-engine-sc": "^5.1.0",
     "axios": "^0.24.0",
     "blueimp-md5": "^2.19.0",
     "date-fns": "^2.28.0",
+    "draft-js": "^0.11.7",
     "express-jwt": "^6.1.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -28,6 +30,7 @@
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "styled-components": "^5.3.3",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-react": "^4.5.0",
