--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "axios": "^0.24.0",
     "blueimp-md5": "^2.19.0",
     "date-fns": "^2.28.0",
-    "draft-js": "^0.11.7",
     "express-jwt": "^6.1.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -28,9 +27,11 @@
     "next-swagger-doc": "^0.1.11",
     "nodemailer": "^6.7.2",
     "prop-types": "^15.8.1",
+    "quill": "^1.3.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-draft-wysiwyg": "^1.14.7",
+    "react-quill": "^1.3.5",
+    "react-quilljs": "^1.2.17",
     "styled-components": "^5.3.3",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-react": "^4.5.0",
