--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^5.1.0",
     "axios": "^0.24.0",
     "blueimp-md5": "^2.19.0",
+    "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "express-jwt": "^6.1.0",
     "joi": "^17.6.0",
