--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.8.1",
     "quill": "^1.3.7",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-quill": "^1.3.5",
     "react-quilljs": "^1.2.17",
