--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "express-jwt": "^6.1.0",
+    "file-saver": "^2.0.5",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
@@ -38,6 +39,7 @@
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-react": "^4.5.0",
     "uuid": "^8.3.2",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
