--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "@next/eslint-plugin-next": "^12.1.6"
   }
 }
