--- a/package.json
+++ b/package.json
@@ -43,10 +43,14 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.6",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "cypress": "^10.1.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
-    "prettier": "2.5.1",
-    "@next/eslint-plugin-next": "^12.1.6"
+    "jest": "^28.1.1",
+    "prettier": "2.5.1"
   }
 }
