--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
     "jest": "^28.1.1",
-    "prettier": "2.5.1"
+    "node-mocks-http": "^1.11.0",
+    "prettier": "2.5.1",
+    "typescript": "^4.7.3"
   }
 }
