--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@next/eslint-plugin-next": "^12.1.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
+    "@types/mongodb": "^4.0.7",
     "cypress": "^10.1.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
