--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{js, jsx}\""
+    "format": "prettier --write \"**/*.{js, jsx}\"",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -43,6 +44,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.2",
     "@next/eslint-plugin-next": "^12.1.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
@@ -52,6 +54,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "node-mocks-http": "^1.11.0",
     "prettier": "2.5.1",
     "typescript": "^4.7.3"
