--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js, jsx}\"",
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
